name:                pyrescript
version:             0.9.1.0
synopsis:            PureScript for Python
description:         Please see README.md
homepage:            https://github.com/joneshf/pyrescript#readme
license:             BSD3
license-file:        LICENSE
author:              Hardy Jones
maintainer:          jones3.hardy@gmail.com
copyright:           2016 Hardy Jones
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable pyrescript
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 0.11 && < 0.12
                     , ansi-terminal >= 0.6 && < 0.7
                     , base-compat >= 0.9 && < 0.10
                     , bytestring >= 0.10 && < 0.11
                     , containers >= 0.5 && < 0.6
                     , directory >= 1.2 && < 1.3
                     , filepath >= 1.4 && < 1.5
                     , Glob >= 0.7 && < 0.8
                     , language-javascript >= 0.6 && < 0.7
                     , lifted-base >= 0.2 && < 0.3
                     , monad-control >= 1.0 && < 1.1
                     , mtl >= 2.2 && < 2.3
                     , optparse-applicative >= 0.12 && < 0.13
                     , parsec >= 3.1 && < 3.2
                     , pattern-arrows >= 0.0.2 && < 0.0.3
                     , purescript == 0.9.1
                     , sourcemap >= 0.1 && < 0.2
                     , time >= 1.6 && < 1.7
                     , transformers >= 0.5 && < 0.6
                     , transformers-base >= 0.4 && < 0.5
                     , utf8-string >= 1.0 && < 1.1
